Updates from Overleaf

--- a/FJH23.bib
+++ b/FJH23.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Fred J Hickernell at 2021-09-28 08:14:25 -0500 
+%% Created for Fred J Hickernell at 2021-11-16 12:34:50 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -75,6 +75,85 @@
 @string{sub = {\Ignore{u}Manuscripts Under Review}}
 
 
+@misc{Ips21a,
+	author = {I. Ipsen},
+	date-added = {2021-11-16 11:02:15 -0600},
+	date-modified = {2021-11-16 11:02:15 -0600},
+	howpublished = {Presentation at Dagstuhl Seminar on Proabilistic Numerical Methods -- From Theory to Implmentation},
+	title = {{BayesCG}: A Probabilistic Numeric Linear Solver},
+	year = {2021}}
+
+@webpage{IDEASAbout,
+	author = {{The IDEAS Team}},
+	date-added = {2021-11-11 12:51:03 -0600},
+	date-modified = {2021-11-11 12:52:49 -0600},
+	title = {IDEAS Productivity},
+	url = {https://ideas-productivity.org/ideas-home-page/about-ideas},
+	year = {2021},
+	bdsk-url-1 = {https://ideas-productivity.org/ideas-home-page/about-ideas}}
+
+@webpage{IDEASWatershedPict,
+	date-added = {2021-11-11 12:27:43 -0600},
+	date-modified = {2021-11-11 12:30:00 -0600},
+	title = {IDEAS Watersheds Code Diagam},
+	url = {https://ess.science.energy.gov/wp-content/uploads/2021/01/IDEAS-Watersheds-software-ecosystem-road.jpg},
+	year = {2021},
+	bdsk-url-1 = {https://ess.science.energy.gov/wp-content/uploads/2021/01/IDEAS-Watersheds-software-ecosystem-road.jpg}}
+
+@webpage{SciPyQMC,
+	author = {P. Roy},
+	date-added = {2021-11-10 16:54:38 -0600},
+	date-modified = {2021-11-10 16:55:44 -0600},
+	title = {{SciPy} Quasi-{M}onte {C}arlo submodule},
+	url = {https://docs.scipy.org/doc/scipy/reference/stats.qmc.html},
+	year = {2021},
+	bdsk-url-1 = {https://docs.scipy.org/doc/scipy/reference/stats.qmc.html}}
+
+@webpage{probnum,
+	author = {J. Wenger and N. Kr\"amer and N. Bosch},
+	date-added = {2021-11-10 16:50:49 -0600},
+	date-modified = {2021-11-10 16:52:30 -0600},
+	title = {probnum},
+	url = {https://github.com/probabilistic-numerics/probnum},
+	year = {2021},
+	bdsk-url-1 = {https://github.com/probabilistic-numerics/probnum}}
+
+@book{HolEic19a,
+	author = {A. Holder and J. Eichholz},
+	date-added = {2021-11-10 14:50:18 -0600},
+	date-modified = {2021-11-10 14:51:35 -0600},
+	publisher = {Springer},
+	title = {An Introduction to Computational Science},
+	year = {2019}}
+
+@book{ShifShif14a,
+	author = {A. B. Shiflet and G. W. Shiflet},
+	date-added = {2021-11-10 14:47:58 -0600},
+	date-modified = {2021-11-10 14:49:44 -0600},
+	isbn = {9780691160719},
+	publisher = {Princeton University Press},
+	title = {Introduction to Computational Science},
+	year = {2014}}
+
+@url{Her19a,
+	author = {M. Heroux},
+	date-added = {2021-11-10 14:24:09 -0600},
+	date-modified = {2021-11-10 14:27:04 -0600},
+	title = {Research Software Science: {A} Scientific Approach to Understanding and Improving How We Develop and Use Software for Research},
+	url = {https://bssw.io/blog_posts/research-software-science-a-scientific-approach-to-understanding-and-improving-how-we-develop-and-use-software-for-research},
+	urldate = {2019},
+	bdsk-url-1 = {https://bssw.io/blog_posts/research-software-science-a-scientific-approach-to-understanding-and-improving-how-we-develop-and-use-software-for-research}}
+
+@techreport{ECP2020a,
+	author = {{IDEAS-ECP Team and Collaborators}},
+	date-added = {2021-11-10 14:20:15 -0600},
+	date-modified = {2021-11-10 14:23:26 -0600},
+	institution = {Excascale Computing Project},
+	title = {Advancing Scientific Productivity through Better Scientific Software: {D}eveloper Productivity and Software Sustainability Report},
+	url = {https://www.exascaleproject.org/wp-content/uploads/2020/01/IDEAS-ECP.Report.v1.0.pdf},
+	year = {2020},
+	bdsk-url-1 = {https://www.exascaleproject.org/wp-content/uploads/2020/01/IDEAS-ECP.Report.v1.0.pdf}}
+
 @book{AsmGly2007a,
 	author = {S. Asmussen and P. Glynn},
 	date-added = {2021-09-27 09:02:48 -0500},
@@ -82,9 +161,10 @@
 	doi = {10.1007/978-0-387-69033-9},
 	publisher = {Springer-Verlag, New York},
 	series = {Stochastic Modelling and Applied Probability},
-	title = {Stochastic Simulation:  Algorithms and Analysis},
+	title = {Stochastic Simulation: Algorithms and Analysis},
 	volume = {57},
-	year = {2007}}
+	year = {2007},
+	bdsk-url-1 = {https://doi.org/10.1007/978-0-387-69033-9}}
 
 @inproceedings{LEcEtal22a,
 	author = {P. L'Ecuyer and P. Marion and M. Godin and F. Puchhammer},
@@ -982,12 +1062,13 @@
 	year = {2010},
 	bdsk-url-1 = {https://doi.org/10.1145/1878537.1878621}}
 
-@webpage{STAN,
+@manual{STAN,
+	author = {{Stan Development Team}},
 	date-added = {2018-03-27 04:26:32 +0000},
-	date-modified = {2018-03-27 04:27:46 +0000},
-	title = {Stan Software},
+	date-modified = {2021-11-10 16:49:43 -0600},
+	title = {Stan Modeling Language Users Guide and Reference Manual, version 2.28},
 	url = {http://mc-stan.org},
-	year = {2018},
+	year = {2021},
 	bdsk-url-1 = {http://mc-stan.org}}
 
 @webpage{GilesSoft,
