--- a/FJHown23.bib
+++ b/FJHown23.bib
@@ -80,7 +80,7 @@
 	date-added = {2021-08-23 08:58:49 -0500},
 	date-modified = {2021-08-23 08:58:49 -0500},
 	doi = {10.5281/zenodo.4018189},
-	howpublished = {MATLAB software, \url{http://gailgithub.github.io/GAIL\_Dev/}},
+	howpublished = {MATLAB software, \url{http://gailgithub.github.io/GAIL_Dev/}},
 	pubtype = soft,
 	title = {{GAIL}: {G}uaranteed {A}utomatic {I}ntegration {L}ibrary (Versions 1.0--2.3.1)},
 	year = {2020},
